# ilucca-birthday-cli

./: .gitignore  Dockerfile  README.md  config.example.ini  docker_build.sh  docker_run_server.sh  pyproject.toml
ilucca_birthday_cli/: __init__.py  birthday_utils.py
ilucca_birthday_cli/utils/: birthday_utils.py  global_utils.py  slack_utils.py
